完成練習h1到h6練習

--- a/content/typography.html
+++ b/content/typography.html
@@ -5,23 +5,23 @@
 <h2>標題</h2>
 
 <div class="demo">
-  <練習>h1. Bootstrap heading</練習>
-  <練習>h2. Bootstrap heading</練習>
-  <練習>h3. Bootstrap heading</練習>
-  <練習>h4. Bootstrap heading</練習>
-  <練習>h5. Bootstrap heading</練習>
-  <練習>h6. Bootstrap heading</練習>
+  <h1>h1. Bootstrap heading</h1>
+  <h2>h2. Bootstrap heading</h2>
+  <h3>h3. Bootstrap heading</h3>
+  <h4>h4. Bootstrap heading</h4>
+  <h5>h5. Bootstrap heading</h5>
+  <h6>h6. Bootstrap heading</h6>
 </div>
 
 <h4>不能直接使用 HTML 元素時，可使用 .h1 到 .h6 的類別</h4>
 
 <div class="demo">
-  <p class="練習">h1. Bootstrap heading</p>
-  <p class="練習">h2. Bootstrap heading</p>
-  <p class="練習">h3. Bootstrap heading</p>
-  <p class="練習">h4. Bootstrap heading</p>
-  <p class="練習">h5. Bootstrap heading</p>
-  <p class="練習">h6. Bootstrap heading</p>
+  <p class="h1">h1. Bootstrap heading</p>
+  <p class="h2">h2. Bootstrap heading</p>
+  <p class="h3">h3. Bootstrap heading</p>
+  <p class="h4">h4. Bootstrap heading</p>
+  <p class="h5">h5. Bootstrap heading</p>
+  <p class="h6">h6. Bootstrap heading</p>
 </div>
 
 <h4>
@@ -31,7 +31,7 @@
 <div class="demo">
   <h3>
     Fancy display heading
-    <練習 class="text-muted">With faded secondary text</練習>
+    <p class="text-muted">With faded secondary text</p>
   </h3>
 </div>
 
