--- a/content/typography.html
+++ b/content/typography.html
@@ -66,7 +66,7 @@
             <h2>前導主題</h2>
 
             <div class="demo">
-                <p class="練習">
+                <p class="lead">
                     This is a lead paragraph. It stands out from regular paragraphs.
                 </p>
             </div>
